# rust-minidump-mcp

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.ko.md  README.md  TASKS.md  justfile  pyproject.toml
.github/workflows/: ci.yml  release.yml
minidumpmcp/: __init__.py  cli.py  client.py  exceptions.py  server.py
minidumpmcp/config/: client_settings.py  settings.py
minidumpmcp/prompts/: analyze_crash_end_to_end.md  analyze_stackwalk_result.md  crash_analysis_provider.py  crash_workflow_provider.py  decode_exception_info.md  evaluate_symbol_quality.md  plan.md  prepare_symbols_for_analysis.md  stack_interpreter.md  symbol_advisor.md  symbol_preparation_provider.py
minidumpmcp/tools/: _common.py  dump_syms.py  stackwalk.py
rust_minidump_mcp/: __init__.py  server.py
rust_minidump_mcp/tools/: stackwalk.py
tests/: test_client_config.py  test_dump_syms.py  test_integration_dump_syms.py  test_sanity.py  test_settings.py  test_stackwalk.py
tools/: .crates.toml  .crates2.json  AGENTS.md  README.md
