[project]
name = "rust-minidump-mcp"
version = "0.1.0"
description = "Rust Minidump MCP server"
authors = [{name = "Example"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "uvicorn",
    "pydantic>=2",
    "fastmcp>=2.8.1",
]


[tool.uv]
dev-dependencies = [
    "ruff",
    "mypy",
    "pytest",
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
strict = true
